# flecs-luajit-binding

./: .gitmodules  LICENSE  README.md  flecs.lua  flecs_cdef.json  flecs_cdef.lua  meson.build  todo.md
scripts/: gen_cdef.py  generate_cdef.py
test/: aux.lua  entity.lua  g.lua  main.lua  query.lua  struct.lua  world.lua
